[package]
name = "anchorpy_core"
version = "0.1.2"
edition = "2021"
include = ["/src", "/LICENSE", "/pyproject.toml"]
description = "Python bindings for Anchor Rust code"
license = "Apache-2.0"
repository = "https://github.com/kevinheavey/anchorpy-core"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "anchorpy_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.17.2", features = ["extension-module", "abi3-py37"] }
solders-macros = "0.6.0"
derive_more = "0.99.17"
anchor-syn = { git = "https://github.com/coral-xyz/anchor", features = ["idl"], rev = "fa12498" }
serde = { version = "1.0.147", features = ["derive"] }
solders-traits = "0.9.3"
serde_json = "1.0.87"
pythonize = "0.17.0"
